# agent-engineering

./: .gitignore  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  2_lab2_groq.ipynb  3_lab3.ipynb  4_lab4.ipynb  t.ipynb  temp.ipynb
2_openai/deep_research/: email_agent.py
2_openai/deep_research_groq/: agents.py  app.py  data_loader.py
3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/: crew.py
3_crew/debate_mine/: README.md  pyproject.toml
3_crew/debate_mine/output/: decide.md  oppose.md  propose.md
3_crew/debate_mine/src/debate_mine/: crew.py  main.py
3_crew/debate_mine/src/debate_mine/config/: agents.yaml  tasks.yaml
3_crew/engineering_team/src/engineering_team/: crew.py
3_crew/engineering_team/src/engineering_team/config/: agents.yaml
3_crew/financial_researcher_mine/: README.md  pyproject.toml
3_crew/financial_researcher_mine/src/financial_researcher_mine/: crew.py  main.py
3_crew/financial_researcher_mine/src/financial_researcher_mine/config/: agents.yaml  tasks.yaml
3_crew/stock_picker_mine/: README.md  pyproject.toml
3_crew/stock_picker_mine/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_mine/src/stock_picker_mine/: crew.py  main.py
3_crew/stock_picker_mine/src/stock_picker_mine/config/: agents.yaml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  4_lab4_logging.ipynb  deep.db-shm  deep.db-wal  memory.db-shm  memory.db-wal  sidekick.py  temp.ipynb  templ.ipynb
4_langgraph/sandbox/: dinner.md
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb
5_autogen/sandbox/: flights.md
