[project]
name = "debate_mine"
version = "0.1.0"
description = "debate_mine using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
debate_mine = "debate_mine.main:run"
run_crew = "debate_mine.main:run"
train = "debate_mine.main:train"
replay = "debate_mine.main:replay"
test = "debate_mine.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
