[project]
name = "financial_researcher_mine"
version = "0.1.0"
description = "financial_researcher_mine using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
financial_researcher_mine = "financial_researcher_mine.main:run"
run_crew = "financial_researcher_mine.main:run"
train = "financial_researcher_mine.main:train"
replay = "financial_researcher_mine.main:replay"
test = "financial_researcher_mine.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
